<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="pt.rikmartins.adn.popularmoviesstage2.ui.detail.DetailsViewModel" />

        <variable
            name="actions"
            type="pt.rikmartins.adn.popularmoviesstage2.ui.detail.DetailsActivity.Actions" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailsActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/default_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_margin" />

            <CheckBox
                android:id="@+id/favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/favorite"
                android:button="@null"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="@id/title"
                android:checked="@{viewModel.isMovieFavorite() ?? false}"
                tools:checked="true" />

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBaseline_toBaselineOf="@id/title"
                app:layout_constraintEnd_toStartOf="@id/labelBarrier"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/leftGuideline" />

            <TextView
                android:id="@+id/releaseDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_release_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBaseline_toBaselineOf="@id/releaseDate"
                app:layout_constraintEnd_toStartOf="@id/labelBarrier"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/leftGuideline" />

            <TextView
                android:id="@+id/voteAverageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_vote_average"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBaseline_toBaselineOf="@id/voteAverage"
                app:layout_constraintEnd_toStartOf="@id/labelBarrier"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/leftGuideline" />

            <TextView
                android:id="@+id/plotSynopsisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_plot_synopsis"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBaseline_toBaselineOf="@id/plotSynopsis"
                app:layout_constraintEnd_toStartOf="@id/labelBarrier"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/leftGuideline" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/labelBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="videosLabel,releaseDateLabel,voteAverageLabel,titleLabel,plotSynopsisLabel" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@{viewModel.movie.title}"
                app:layout_constraintEnd_toStartOf="@id/favorite"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/moviePoster"
                tools:text="Something something something dark side" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="title,titleLabel"
                android:visibility="@{viewModel.movie.title != null ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@{viewModel.movie.releaseDate}"
                app:layout_constraintEnd_toStartOf="@id/favorite"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="releaseDate,releaseDateLabel"
                android:visibility="@{viewModel.movie.releaseDate != null ? View.VISIBLE : View.GONE}"/>

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="0dp"
                android:layout_height="@dimen/details_movie_poster_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/voteAverage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@{viewModel.movie.voteAverage.toString()}"
                app:layout_constraintEnd_toStartOf="@id/favorite"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/releaseDate" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="voteAverage,voteAverageLabel"
                android:visibility="@{viewModel.movie.voteAverage != null ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/plotSynopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@{viewModel.movie.overview}"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/labelBarrier"
                app:layout_constraintTop_toBottomOf="@id/voteAverage" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="plotSynopsis,plotSynopsisLabel"
                android:visibility="@{viewModel.movie.overview != null ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/videosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/plotSynopsis"
                app:layout_constraintEnd_toStartOf="@id/labelBarrier"
                android:text="@string/details_videos"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videos"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:clipToPadding="false"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/videosLabel" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/videoGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="videos,videosLabel" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/videos"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{actions::seeReviews}"
                android:gravity="center_vertical"
                android:text="@string/details_read_the_reviews" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </ScrollView>
</layout>
